snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.110420-3.jar.md5
50f2cdec588b6d252168e9733b7c5d1d